2000-07-10  Laurent Pautet  <pautet@inf.enst.fr>

	* s-gprese.ads: Typo.

2000-07-04  Laurent Pautet  <pautet@inf.enst.fr>

	* Makefile.am, Makefile.in: Add all the server children and rename
 	the protocol units in order to be in the Garlic.Protocols
 	hierarchy. Add an Ada program b_gaprco to build s-gaprco.adb.

	* s-gaphlo.adb, s-gaphlo.ads: Location_Type is no longer a
 	controlled type - no dynamically allocated data
 	anymore. Therefore, Get_Data returns now a string instead of a
 	string access.

	* s-gasoli.adb, s-gasoli.ads: Add soft_links concerning gnat
 	tasking especially termination, priority and abortion. Remove
 	barriers and replace them with watchers.
	
	* s-gaprob.adb, s-gaprob.ads: Replace with s-gartas.adb and
 	s-gartas.ads - System.Garlic.Tasking. Define new soft_links needed 
	in System.Garlic.Soft_Links (see above).

	* s-ganota.adb, s-ganota.ads: Add unit System.Garlic.No_Tasking
 	which provides soft links for the light PCS - no tasking loaded in
 	partition.

	* s-gardeb.adb: Do not define a protected object to serialize
 	outputs and use soft links instead. Therefore, adapt elaboration
 	order in GLADE. Remove termination file obsolete procedures.

	* s-garela.adb, s-garela.ads: As a default, load PCS with
	tasking. Change elaboration order (see above).

	* s-garexc.adb, s-garexc.ads: Move Error_Type from Utils to
	Exceptions for elaboration purposes.

	* s-garfil.adb, s-garfil.ads: Replace Barriers with Watchers and
	reorganize code accordingly.

	* s-gargro.adb: Changes due to unit declaration changes in other
 	units.

	* s-garhea.adb: Replace Barrier with Watcher. use new definition
	of a pure client partition and a partition with light PCS. A
	partition with a light PCS is a pure client partition with no
	tasking. A pure client partition is a partition with a local
	termination and which does not include RCI units or distributed
	object creations.

	* s-garnam.adb, s-garnam.ads: Remove some controlled types and